K8s/zap-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zap
  template:
    metadata:
      labels:
        app: zap
    spec:
      containers:
        - name: zap
          image: owasp/zap2docker-stable
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: zap-data
              mountPath: /zap/wrk/
      volumes:
        - name: zap-data
          emptyDir: {}
