K8s/zap-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zap
  namespace: owasp-zap
spec:
  ports:
    - port: 8080
  selector:
    app: zap
