K8s/zap-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zap-ingress
  namespace: owasp-zap
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host: owasp.internal.datafr.ee
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zap-service
            port:
              number: 8080
